--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
+.weather-app {
+  max-width: 600px;
+  margin: 30px auto;
+}
+#search-section {
+  border: 1px solid grey;
+  padding: 20px 10px;
+  border-radius: 10px;
+}
+
 img {
-  max-width: 50px;
+  max-width: 100px;
 }
