--- a/src/style.css
+++ b/src/style.css
@@ -19,18 +19,19 @@
 #city-name {
   text-align: left;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 35px;
 }
-#today-temp {
+.thermo-temp {
   text-align: left;
   padding-top: 15px;
-  font-size: 45px;
+  font-size: 55px;
   font-weight: 700;
 }
 .additional-infos {
   list-style: none;
   position: relative;
-  bottom: -50px;
+  font-size: 22px;
+  bottom: -70px;
   padding-left: 10px;
 }
 .weather-icon {
@@ -46,6 +47,16 @@ img {
 }
 
 #description-temp,
-#day {
+#day,
+#date-mdy {
   text-transform: capitalize;
+  font-size: 20px;
+}
+
+#search-button {
+  padding-left: 0;
+}
+
+.additional-infos span {
+  margin-left: 10px;
 }
