--- a/src/style.css
+++ b/src/style.css
@@ -34,16 +34,18 @@
   bottom: -70px;
   padding-left: 10px;
 }
-.weather-icon {
+#description-temp {
   text-align: center;
 }
-img {
-  width: 200px;
-}
+
 .forecast {
   border: 1px solid grey;
   padding: 10px 10px;
   border-radius: 10px;
+}
+.forecast img {
+  display: block;
+  margin: 0 auto;
 }
 
 #description-temp,
@@ -62,4 +64,8 @@ img {
 }
 .unit-radio {
   margin-left: 15px;
+}
+.card-body {
+  padding-left: 5px;
+  padding-right: 5px;
 }
